# graduate-work

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
app/: __init__.py  config.py  db.sh  redis_pool.py
app/collectors/: dataset.py
app/migrations/versions/: 1381eee69877_init.py  3758f411470a_add_train_model.py  5fd3f50147cb_add_error_field.py  92d11f8ca30f_add_new_datasetstatus.py  d621a56f0c0e_add_test_model.py  eb7bcc2e9c04_initial_migration.py
app/models/: __init__.py  appointment.py  dataset.py  doctor.py  doctor_spec.py  doctor_town.py  test.py  train.py
app/static/: style.css
app/templates/: base.html
app/templates/dataset/: main_dataset.html
app/templates/home/: main_home.html
app/templates/test/: main_test.html
app/templates/train/: main_train.html
app/views/: __init__.py  dataset.py  home.py  index.py  test.py  train.py
src/: annoy_test.py  annoy_test_1.py  annoy_test_catboost.py  catboost_test.py  catboost_top_one_train.py  catboost_train.py  db_func.py  fetcher.py  generate_datasets.py  prepare_data.py  test.py  test_file.py  test_simple_prediction.py  test_utils.py
src/catboost_test/: catbuust_simple_top_3.ipynb  top_one_test.ipynb
src/db/: base.py  create_db.py  fetch_data.py  fetcher.py  models.py
src/vectors/: __init__.py  doctors.py  users.py
